# whisper_subtitle

./: LICENSE  README.md  setup.cfg
whisper_subtitle/: cli.py
