[metadata]
name = whisper_subtitle 
version = 0.1.0 
author = Steven Ho
author_email = stevenjlho@gmail.com 
description = Automatically generate subtitles with openai-whisper

[options]
packages = find:
python_requires = >=3.7
install_requires =
    openai-whisper

[options.entry_points]
console_scripts =
    executable-name = whisper_subtitle.cli:main
