[metadata]
name = whisper_subtitle 
version = 0.1.6
author = Steven Ho
author_email = stevenjlho@gmail.com 
description = Automatically generate subtitles with openai-whisper

[options]
packages = whisper_subtitle
python_requires = >=3.7
install_requires =
    openai-whisper
py_modules = whisper_subtitle

[options.entry_points]
console_scripts =
    whisper_subtitle = whisper_subtitle.cli:main
